[metadata]
name = auto-tuner-BryanJHealy
version = 0.0.1
author = Bryan Healy
author_email = bryanhealy.healy@gmail.com
description = Package for automating hyperparameter tuning for machine learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BryanJHealy/AutoTuner
project_urls =
    Bug Tracker = https://github.com/BryanJHealy/AutoTuner
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
